# server/gatewaysvr/docs/swagger.json
@@ -13,7 +13,7 @@
         },
         "version": "1.0"
     },
-    "host": "127.0.0.1:8002",
+    "host": "127.0.0.1:8000",
     "paths": {
         "/test/{id}": {
             "get": {
@@ -75,7 +75,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/request.UserLoginRequest"
+                            "$ref": "#/definitions/pb.UserLoginRequest"
                         }
                     }
                 ],
@@ -103,13 +103,15 @@
                 }
             }
         },
-        "request.UserLoginRequest": {
+        "pb.UserLoginRequest": {
             "type": "object",
             "properties": {
-                "userAccount": {
+                "userName": {
+                    "description": "用户昵称",
                     "type": "string"
                 },
                 "userPassword": {
+                    "description": "密码",
                     "type": "string"
                 }
             }
