# server/gatewaysvr/main.go
@@ -26,7 +26,7 @@ import (
 //	@license.name	Apache 2.0
 //	@license.url	http://www.apache.org/licenses/LICENSE-2.0.html
 
-// @host	127.0.0.1:8002
+// @host	127.0.0.1:8000
 // @BasePath
 func main() {
 	r := gin.Default()
